--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-docutils==0.20.1
+beautifulsoup4==4.11.1
+blinker==1.6.2
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.4
+Flask==2.3.2
+Flask-Cors==4.0.0
+fuzzywuzzy==0.18.0
+gunicorn==20.1.0
 idna==3.4
-pycparser==2.21
-python-dotenv==1.0.0
-requests==2.28.2
-six==1.16.0
-urllib3==1.26.15
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+requests==2.28.1
+soupsieve==2.3.2.post1
+urllib3==1.26.13
+Werkzeug==2.3.6
