--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,10 @@ gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Levenshtein==0.21.1
 MarkupSafe==2.1.3
+python-Levenshtein==0.21.1
+rapidfuzz==3.1.1
 requests==2.28.1
 soupsieve==2.3.2.post1
 urllib3==1.26.13
